--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,33 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --white: 255 255 255;
-  --black: 0 0 0;
-  --primary: 0 179 135;
-  --primary-500: 0 179 135;
-  --primary-600: 15 153 119;
-  --primary-700: 22 138 109;
-  --primary-dark: 0 179 135;
-  --primary-light: 178 254 236;
-  --dark: 34 36 36;
-  --dark-600: 36 38 37;
-  --light-grey: 222 222 222;
   --theme-blue: 24 82 255;
-  --blue-light: 42 94 250;
-  --secondary-500: 240 240 240;
-  --secondary-600: 227 227 227;
-  --secondary-700: 214 214 214;
-  --gray-700: 58 61 77;
-  --error: 252 23 77;
   --red: 242 74 74;
-  --placeholder: 69 66 66;
-  --text-dark: 20 20 20;
-  --color-purple: 97 83 225;
-
-  --color-dark-500: 41 41 43;
-  --color-light: 209 209 209;
-
-  --base-font: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 @layer base {
@@ -56,7 +31,7 @@
   }
 
   .btn {
-    @apply inline-flex justify-center items-center text-center py-2.5 px-8 text-[14px] font-semibold text-center leading-5 tracking-[0.08em] rounded-full whitespace-nowrap cursor-pointer select-none;
+    @apply inline-flex justify-center items-center text-center py-2.5 px-8 text-[14px] font-semibold leading-5 tracking-[0.08em] rounded-full whitespace-nowrap cursor-pointer select-none;
   }
 
   .btn--primary {
